# oss-eda-playground

./: .gitignore  README  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.setup/: manual_build.sh  setup_nvidia_toolkit.sh
resources/design/source/: multiplier.sv
src/ai_poe/: __init__.py
src/ai_poe/utils/: globals.py
